Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
585f2889e0806617078fe7dc815ea9da727faa7a.
Description
If openssl header files (ssl-dev) are not installed, i.e. so Qt is compiled with -no-openssl, QtJsonDb fails to compile ungracefully:
../3rdparty/btree/src/btree_p.h:50:27: fatal error: openssl/sha.h: No such file or directory
And btree.pri adds LIBS += -lssl -lcrypto
But btree.c only needs this to find a function to compute a sha1 sum, and that is already present in qtbase, see QCryptographicHash. Hance, it is redundant and very clumsy to require ssl-dev and libs here.
(Another issue is that it presumably could rather use a non-cryptographic checksum function instead, e.g. murmurhash, which would save CPU cycles)