Use QCryptographicHash in btree

Fixes bug https://bugreports.qt.nokia.com/browse/QTBUG-23890.

Change-Id: I363916b162ad888045c55cee924353447fa655d1
Reviewed-by: Jing Bai <jing.t.bai@nokia.com>