tools/aodbread/aodbread.pro
@@ -6,7 +6,6 @@ CONFIG += debug
 
 INCLUDEPATH += $$PWD/../../src/daemon
 LIBS += -L$$QT.jsondb.libs
-!mac:LIBS += -lssl -lcrypto
 
 DEFINES += SRCDIR=\\\"$$PWD/\\\"
 
