tests/auto/qbtree/qbtree.pro
@@ -6,7 +6,5 @@ QT = core testlib
 CONFIG -= app_bundle
 CONFIG += testcase
 
-LIBS += -lssl -lcrypto
-
 SOURCES += \
     main.cpp
