tests/auto/queries/queries.pro
@@ -6,7 +6,6 @@ CONFIG += testcase
 
 INCLUDEPATH += $$PWD/../../../src/daemon
 LIBS += -L$$QT.jsondb.libs
-!mac:LIBS += -lssl -lcrypto
 
 DEFINES += SRCDIR=\\\"$$PWD/\\\"
 
