tests/benchmarks/bdb/bdb.pro
@@ -7,7 +7,6 @@ CONFIG -= app_bundle
 
 INCLUDEPATH += $$PWD/../../../src/daemon
 LIBS += -L$$QT.jsondb.libs
-!mac:LIBS += -lssl -lcrypto
 
 DEFINES += SRCDIR=\\\"$$PWD/\\\"
 
